manifest/deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  labels:
    app: helloworld 
  name: helloworld
  namespace: default

spec:
  replicas: 3  # Number of Pods to run in this deployment.  In this case 3 copies.  
  selector:
    matchLabels:
      app: helloworld  # Name of the Pod template below that this deployment is managing.  

  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: helloworld  # Name of the Pod.  This name is importatnt because our service will reference it. 
    spec:
      containers:
      - image: bashofmann/rancher-demo:1.1.0  # Use this image to create our pods from.  The image by default will get pulled from Dockerhub if it is not local.
        imagePullPolicy: IfNotPresent
        name: helloworld  
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
